# cgol

./: .gitignore  CMakeLists.txt  README.md  TODO  build.sh  cgol.ui  cgol_board.cpp  cgol_board.hpp  cgol_frame.cpp  cgol_game.cpp  cgol_game.hpp  cgol_logic.cpp  cgol_logic.hpp  cgol_window.cpp  cgol_window.hpp  main.cpp  test_gui.cpp  test_gui.hpp
.github/workflows/: cmake.yml
include/: cgol_board.hpp  cgol_frame.hpp  cgol_logic.hpp  cgol_loop_thread.hpp  cgol_window.hpp
src/: cgol_board.cpp  cgol_frame.cpp  cgol_logic.cpp  cgol_loop_thread.cpp  cgol_window.cpp  main.cpp
test/: test_board.cpp  test_board.hpp  test_game_logic.cpp  test_game_logic.hpp  test_gui.cpp  test_gui.hpp
